# qdrant_text2image_search

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
notebooks/: txt2img_search.ipynb
src/: app.py  utils.py
