[tool.poetry]
name = "search-engine"
version = "0.1.0-dev"
description = "Online/offline search engine"
authors = ["hh-space-invader <h.hagag.ali@gmail.com>"]
license = none
repository = "https://github.com/hh-space-invader/search-engine-mvp"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
streamlit
qdrant-client
tqdm
pandas

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
